# shion

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/actions/install-cmake/: action.yml
.github/workflows/: ci.yml  linux_ci.yml  windows_ci.yml
cmake/: AddStdModule.cmake  shion.pc.in
include/shion/: cache.hpp  common.hpp  coro.hpp  decl.hpp  defines.hpp  exception.hpp  export.hpp  linq.hpp  math.hpp  parse_json.hpp  polymorphic_variant.hpp  shion.ixx  shion_essentials.hpp  tools.hpp  worker.hpp
include/shion/common/: assert.hpp  cast.hpp  common.ixx  defines.hpp  detail.hpp  exception.cpp  exception.hpp  literals.hpp  tools.hpp  types.hpp
include/shion/containers/: containers.ixx  hive.hpp
include/shion/coro/: async.hpp  awaitable.hpp  coro.hpp  coro.ixx  coroutine.hpp  job.hpp  state_machine.hpp  task.hpp  when_any.hpp
include/shion/io/: io.ixx  logger.cpp  logger.hpp  serializer.hpp  utils.hpp
include/shion/math/: color.hpp  math.ixx  util.hpp  vector.hpp
include/shion/meta/: macros.hpp  meta.ixx  type_list.hpp  type_traits.hpp
include/shion/monad/: arithmetic.hpp  compare.hpp  invoke.hpp  monad.ixx  object.hpp
include/shion/parexp/: expr.hpp  parexp.ixx
include/shion/utility/: bit_mask.h  bit_mask.hpp  optional.hpp  raii_ptr.hpp  string_literal.hpp  supplier.hpp  tuple.hpp  type_list.hpp  unique_handle.hpp  utility.ixx  uuid.hpp
src/: exception.cpp  worker.cpp
src/modules/: _build_modules.hpp  common.ixx  containers.ixx  coro.ixx  io.ixx  math.ixx  meta.ixx  monad.ixx  parexp.ixx  shion.ixx  utility.ixx
src/shion/: common.hpp  coro.hpp  exception.cpp  export.hpp  polymorphic_variant.hpp  shion.ixx  worker.cpp
src/shion/common/: assert.cpp  assert.hpp  cast.hpp  common.cxx  common.ixx  defines.hpp  exception.cpp  exception.hpp  literals.hpp  tools.hpp  types.hpp
src/shion/concurrency/: worker.cpp
src/shion/containers/: concurrent_flush.hpp  containers.ixx  hive.hpp
src/shion/coro/: async.hpp  awaitable.hpp  coro.hpp  coro.ixx  coroutine.hpp  enumerator.hpp  event_hook.hpp  job.hpp  promise.hpp  state_machine.hpp  task.hpp  when_any.hpp
src/shion/io/: io.cxx  io.ixx  logger.cpp  serializer.hpp
src/shion/math/: arithmetic.hpp  math.ixx  util.hpp
src/shion/meta/: macros.hpp  meta.ixx  type_list.hpp  type_traits.hpp
src/shion/monad/: invoke.hpp  monad.ixx  object.hpp
src/shion/parexp/: expr.hpp  parexp.ixx
src/shion/utility/: optional.hpp  raii_ptr.hpp  scope.hpp  string_literal.hpp  tuple.hpp  unique_handle.hpp  utility.ixx  uuid.hpp
src/tests/: containers.hpp  main.cpp  suite.ixx  test.ixx  tests.cpp  tests.hpp  tests.ixx
src/tests/containers/: concurrent_flush.cpp  containers.ixx  hive.cpp
src/tests/coro/: coro.ixx  enumerator.cpp  event_hook.cpp  state_machine.cpp
src/tests/io/: io.ixx  serializer.cpp
